--- a/2.html
+++ b/2.html
@@ -7,51 +7,53 @@
     </head>
     <body>
         <div style="margin-left:  5px;">
-            <img src="google.png" width="1500"/>
+            <img src="google.png" width="100%"/>
         </div>
         <hr size="1" width="100%">
         <div style="margin-left: 40px; color: gray;" id="text">
             <b>Недавние Jam-файлы</b>
         </div>
-        <div class="div1" style="margin-left: 190px;">        
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D" style="color: white;">
-            <img src="1.png" height="220px"/>
-        </a>
-        </div>
-        <div class="div1" style="margin-left: 20px;">        
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D" style="color: white;">
-            <img src="2.png" height="220px"/>
-        </a>
-        </div>
-        <div class="div1" style="margin-left: 20px;">        
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D" style="color: white;">
-            <img src="3.png" height="220px"/>
-        </a>
-        </div>
-        <div class="div1" style="margin-left: 20px;">        
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D" style="color: white;">
-            <img src="4.png" height="220px"/>
-        </a>
-        </div>
-        <div class="div1" style="margin-left: 190px;">        
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D" style="color: white;">
-            <img src="5.png" height="220px"/>
-        </a>
-        </div>
-        <div class="div1" style="margin-left: 20px;">        
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D" style="color: white;">
-            <img src="6.png" height="220px"/>
-        </a>
-        </div>
-        <div class="div1" style="margin-left: 20px;">        
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D" style="color: white;">
-            <img src="7.png" height="220px"/>
-        </a>
-        </div>
-        <div class="div1" style="margin-left: 20px;">        
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D" style="color: white;">
-            <img src="8.png" height="220px"/>
-        </a>
+        <div class="div">
+            <div class="div1">        
+                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D" style="color: white;">
+                <img src="1.png" height="220px"/>
+                </a>
+            </div>
+            <div class="div1">        
+                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D" style="color: white;">
+                <img src="2.png" height="220px"/>
+                </a>
+            </div>
+            <div class="div1">        
+                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D" style="color: white;">
+                <img src="3.png" height="220px"/>
+                </a>
+            </div>
+            <div class="div1">        
+                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D" style="color: white;">
+                <img src="4.png" height="220px"/>
+                </a>
+            </div>
+            <div class="div1">        
+                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D" style="color: white;">
+                <img src="5.png" height="220px"/>
+                </a>
+            </div>
+            <div class="div1">        
+                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D" style="color: white;">
+                <img src="6.png" height="220px"/>
+                </a>
+            </div>
+            <div class="div1">        
+                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D" style="color: white;">
+                <img src="7.png" height="220px"/>
+                </a>
+            </div>
+            <div class="div1">        
+                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D" style="color: white;">
+                <img src="8.png" height="220px"/>
+                </a>
+            </div>
         </div>
     </body>
 </html>
