--- a/2.html
+++ b/2.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div style="margin-left:  5px;">
-            <img src="google.png" width="100%"/>
+            <img src="public/google.png" width="100%"/>
         </div>
         <hr size="1" width="100%">
         <div style="margin-left: 40px; color: gray;" id="text">
@@ -16,42 +16,42 @@
         <div class="div">
             <div class="div1">        
                 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D" style="color: white;">
-                <img src="1.png" height="220px"/>
+                <img src="public/1.png" height="220px"/>
                 </a>
             </div>
             <div class="div1">        
                 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D" style="color: white;">
-                <img src="2.png" height="220px"/>
+                <img src="public/2.png" height="220px"/>
                 </a>
             </div>
             <div class="div1">        
                 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D" style="color: white;">
-                <img src="3.png" height="220px"/>
+                <img src="public/3.png" height="220px"/>
                 </a>
             </div>
             <div class="div1">        
                 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D" style="color: white;">
-                <img src="4.png" height="220px"/>
+                <img src="public/4.png" height="220px"/>
                 </a>
             </div>
             <div class="div1">        
                 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D" style="color: white;">
-                <img src="5.png" height="220px"/>
+                <img src="public/5.png" height="220px"/>
                 </a>
             </div>
             <div class="div1">        
                 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D" style="color: white;">
-                <img src="6.png" height="220px"/>
+                <img src="public/6.png" height="220px"/>
                 </a>
             </div>
             <div class="div1">        
                 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D" style="color: white;">
-                <img src="7.png" height="220px"/>
+                <img src="public/7.png" height="220px"/>
                 </a>
             </div>
             <div class="div1">        
                 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D" style="color: white;">
-                <img src="8.png" height="220px"/>
+                <img src="public/8.png" height="220px"/>
                 </a>
             </div>
         </div>
