feat:conflict.check1

--- a/2.html
+++ b/2.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div style="margin-left:  5px;">
-            <img src="public/google.png" width="100%"/>
+            <img src="public/newlogo.png" width="100%"/>
         </div>
         <hr size="1" width="100%">
         <div style="margin-left: 40px; color: gray;" id="text">
