изменил названия дивов, убрал тэг "style", добавил выпадающее меню

--- a/2.html
+++ b/2.html
@@ -6,50 +6,57 @@
         <title>джамборд курильщика</title>
     </head>
     <body>
-        <div style="margin-left:  5px;">
-            <img src="public/google.png" width="100%"/>
+        <div class="dropdown">
+            <button class="dropbtn">
+                <img src="public/icon.png">
+            </button>
+            <div class="dropdown-content">
+                <a href="https://www.youtube.com/watch?v=k1J-RluBoJU">Ссылка 1</a>
+                <a href="https://www.youtube.com/watch?v=k1J-RluBoJU">Ссылка 2</a>
+                <a href="https://www.youtube.com/watch?v=k1J-RluBoJU">Ссылка 3</a>
+              </div>
         </div>
         <hr size="1" width="100%">
-        <div style="margin-left: 40px; color: gray;" id="text">
+        <div class="title">
             <b>Недавние Jam-файлы</b>
         </div>
-        <div class="div">
-            <div class="div1">        
+        <div class="CardsContainer">
+            <div class="card">        
                 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D" style="color: white;">
                 <img src="public/1.png" height="220px"/>
                 </a>
             </div>
-            <div class="div1">        
+            <div class="card">        
                 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D" style="color: white;">
                 <img src="public/2.png" height="220px"/>
                 </a>
             </div>
-            <div class="div1">        
+            <div class="card">        
                 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D" style="color: white;">
                 <img src="public/3.png" height="220px"/>
                 </a>
             </div>
-            <div class="div1">        
+            <div class="card">        
                 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D" style="color: white;">
                 <img src="public/4.png" height="220px"/>
                 </a>
             </div>
-            <div class="div1">        
+            <div class="card">        
                 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D" style="color: white;">
                 <img src="public/5.png" height="220px"/>
                 </a>
             </div>
-            <div class="div1">        
+            <div class="card">        
                 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D" style="color: white;">
                 <img src="public/6.png" height="220px"/>
                 </a>
             </div>
-            <div class="div1">        
+            <div class="card">        
                 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D" style="color: white;">
                 <img src="public/7.png" height="220px"/>
                 </a>
             </div>
-            <div class="div1">        
+            <div class="card">        
                 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D" style="color: white;">
                 <img src="public/8.png" height="220px"/>
                 </a>
