--- a/2.html
+++ b/2.html
@@ -7,10 +7,10 @@
     </head>
     <body>
         <div class="dropdown">
-            <button class="dropbtn">
+            <button class="drop-button">
                 <img src="public/icon.png">
             </button>
-            <div class="dropdown-content">
+            <div class="dropdown-link">
                 <a href="https://www.youtube.com/watch?v=k1J-RluBoJU">Ссылка 1</a>
                 <a href="https://www.youtube.com/watch?v=k1J-RluBoJU">Ссылка 2</a>
                 <a href="https://www.youtube.com/watch?v=k1J-RluBoJU">Ссылка 3</a>
@@ -20,7 +20,7 @@
         <div class="title">
             <b>Недавние Jam-файлы</b>
         </div>
-        <div class="CardsContainer">
+        <div class="cardsContainer">
             <div class="card">        
                 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D" style="color: white;">
                 <img src="public/1.png" height="220px"/>
