--- a/2.html
+++ b/2.html
@@ -7,13 +7,13 @@
     </head>
     <body>
         <div class="dropdown">
-            <button class="drop-button">
-                <img src="public/icon.png">
+            <button class="dropdown-button">
+                <img src="public/icon.png" width="28px" height="28px">
             </button>
-            <div class="dropdown-link">
-                <a href="https://www.youtube.com/watch?v=k1J-RluBoJU">Ссылка 1</a>
-                <a href="https://www.youtube.com/watch?v=k1J-RluBoJU">Ссылка 2</a>
-                <a href="https://www.youtube.com/watch?v=k1J-RluBoJU">Ссылка 3</a>
+            <div class="dropdown-container">
+                <a href="http://www.google.com"><div class="dropdown-link">Some content here</div></a>
+                <a href="http://www.google.com"><div class="dropdown-link">Some content here</div></a>
+                <a href="http://www.google.com"><div class="dropdown-link">Some content here</div></a>
               </div>
         </div>
         <hr size="1" width="100%">
